feat: implemented ping route
