# docs/swagger.json
@@ -1,7 +1,77 @@
 {
     "swagger": "2.0",
     "info": {
+        "termsOfService": "github.com/jeanmolossi/vigilant-waddle/terms/",
         "contact": {}
     },
-    "paths": {}
+    "paths": {
+        "/ping": {
+            "get": {
+                "description": "A simple health check.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "healthcheck"
+                ],
+                "summary": "Ping the server.",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/httputil.PingOk"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/httputil.PingInternalServerErr"
+                        }
+                    },
+                    "502": {
+                        "description": "Bad Gateway",
+                        "schema": {
+                            "$ref": "#/definitions/httputil.PingInternalServerErr"
+                        }
+                    },
+                    "503": {
+                        "description": "Service Unavailable",
+                        "schema": {
+                            "$ref": "#/definitions/httputil.PingInternalServerErr"
+                        }
+                    }
+                }
+            }
+        }
+    },
+    "definitions": {
+        "httputil.PingInternalServerErr": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string",
+                    "example": "unexpected error"
+                }
+            }
+        },
+        "httputil.PingOk": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string",
+                    "example": "pong"
+                }
+            }
+        }
+    },
+    "securityDefinitions": {
+        "access_token": {
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
+        }
+    }
 }
